--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Chat</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="chat/style.css" />
     <script src="https://unpkg.com/phosphor-icons"></script>
   </head>
   <body>
@@ -91,6 +91,6 @@
       </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="chat/script.js"></script>
   </body>
 </html>
